--- a/friends.html
+++ b/friends.html
@@ -36,12 +36,20 @@
         </span>
       </div>
     </header>
-
     <a id="friends-display-link">
       <i class="fas fa-info-circle"></i>Friends's names display
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
-
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar"/>
+        <div class="user-component__text">
+          <h4 class="user-component__title">Kimc</h4>
+          <h6 class="user-component__subtitle">this is text whatever</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
@@ -51,6 +59,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#">
+            <span class="nav__notification">1</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
@@ -61,6 +70,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#">
+            <span class="nav__new">&bull;</span>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
         </li>
