--- a/friends.html
+++ b/friends.html
@@ -40,16 +40,37 @@
       <i class="fas fa-info-circle"></i>Friends's names display
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar"/>
-        <div class="user-component__text">
-          <h4 class="user-component__title">Kimc</h4>
-          <h6 class="user-component__subtitle">this is text whatever</h6>
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar--xl"/>
+          <div class="user-component__text">
+            <h4 class="user-component__title">Kimc</h4>
+            <!-- <h6 class="user-component__subtitle">this is text whatever</h6> -->
+          </div>
         </div>
+        <div class="user-component__column"></div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar--sm"/>
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>        
+      </div>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
@@ -76,6 +97,7 @@
         </li>
       </ul>
     </nav>
+    
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
     </script>
   </body>
