--- a/friends.html
+++ b/friends.html
@@ -72,7 +72,6 @@
         </div>        
       </div>
     </main>
-
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
@@ -98,8 +97,10 @@
           </a>
         </li>
       </ul>
-    </nav>
-    
+    </nav>    
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
     </script>
   </body>
