--- a/chat.html
+++ b/chat.html
@@ -72,6 +72,9 @@
         </input>
       </div>      
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big!!! </span>
+    </div>    
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
     </script>
   </body>
