--- a/friends.html
+++ b/friends.html
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-2x"></i>
         <i class="fas fa-bolt"></i>
       </div>      
@@ -37,15 +37,15 @@
       </div>
     </header>
     <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i>Friends's names display
+      <i class="fas fa-info-circle"></i> Friends's names display
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
     <main class="friends-screen">
       <div class="user-component">
         <div class="user-component__column">
-          <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar--xl"/>
+          <img src="img/mantou7.jpg" class="user-component__avatar user-component__avatar--xl"/>
           <div class="user-component__text">
-            <h4 class="user-component__title">Kimc</h4>
+            <h4 class="user-component__title">Mandoo</h4>
             <!-- <h6 class="user-component__subtitle">this is text whatever</h6> -->
           </div>
         </div>
@@ -58,7 +58,7 @@
         </div>
         <div class="user-component">
           <div class="user-component__column">
-            <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar--sm"/>
+            <img src="img/mantou7.jpg" class="user-component__avatar user-component__avatar--sm"/>
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
             </div>
