--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat w/ Kimc - Kokoa Clone</title>
+    <title>Chat w/ Mandoo - Kokoa Clone</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-2x"></i>
         <i class="fas fa-bolt"></i>
       </div>      
@@ -29,7 +29,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Kimc</h1>
+        <h1 class="alt-header__title">Mandoo</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>        
@@ -41,9 +41,9 @@
         Sunday, May 23, 2021
       </div>
       <div class="message-row">
-        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+        <img src="img/mantou7.jpg" />
         <div class="message-row__content">
-          <span class="message__author">Kimc</span>
+          <span class="message__author">Mandoo</span>
           <div class="message__info">
             <span class="message__bubble">Hi!</span>
             <span class="message__time">21:27</span>
