--- a/chats.html
+++ b/chats.html
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-2x"></i>
         <i class="fas fa-bolt"></i>
       </div>      
@@ -43,9 +43,9 @@
       <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar"/>
+            <img src="img/mantou7.jpg" class="user-component__avatar user-component__avatar"/>
             <div class="user-component__text">
-              <h4 class="user-component__title">Kimc</h4>
+              <h4 class="user-component__title">Mandoo</h4>
               <h6 class="user-component__subtitle">Please check My Kakao Account Info</h6>
             </div>
           </div>
