--- a/find.html
+++ b/find.html
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>0</span>
         <i class="fas fa-battery-full fa-2x"></i>
         <i class="fas fa-bolt"></i>
       </div>      
@@ -69,7 +69,7 @@
             <h5 class="open-post__title">#BTS</h5>
             <h6 class="open-post__hashtags">#bts#army#friends</h6>
             <div class="open-post__members">
-              <img src="https://avatars3.githubusercontent.com/u/3612017" />
+              <img src="img/mantou7.jpg" />
               <span class="open-post__member-count">802 members</span>
               <div class="divider"></div>
               <span class="open-post__member-status">Active</span>
@@ -77,7 +77,7 @@
           </div>
           <div class="open-post__column">            
             <div class="open-post__photo">
-              <img src="https://avatars3.githubusercontent.com/u/3612017" />
+              <img src="img/mantou7.jpg" />
               <div class="open-post__heart-count">
                 <i class="fas fa-heart fa-xs"></i>
                 <span>326</span>
