--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -29,8 +29,8 @@
       </p>
     </header>
     <form id="login-form" action="friends.html" method="get">
-      <input name="username" type="text" placeholder="Email or phone number" required />
-      <input name="password" type="password" placeholder="Password" required />
+      <input name="username" type="text" placeholder="Email or phone number" required minlength="4" />
+      <input name="password" type="password" placeholder="Password" minlength="8" required />
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
