--- a/more.html
+++ b/more.html
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-2x"></i>
         <i class="fas fa-bolt"></i>
       </div>      
@@ -42,9 +42,9 @@
     <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
-          <img src="https://avatars3.githubusercontent.com/u/3612017" class="user-component__avatar user-component__avatar--xl"/>
+          <img src="img/mantou7.jpg" class="user-component__avatar user-component__avatar--xl"/>
           <div class="user-component__text">
-            <h4 class="user-component__title">Kimc</h4>
+            <h4 class="user-component__title">Mandoo</h4>
             <h6 class="user-component__subtitle">+ 787 666 999
               <i class="fas fa-exclamation-circle"></i>
             </h6>
@@ -91,21 +91,21 @@
         <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fab fa-youtube"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kakao Story</span>
+            <span class="more-suggestions__icon-text">Youtube</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fab fa-facebook-square"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kakao Story</span>
+            <span class="more-suggestions__icon-text">Facebook</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fas fa-apple-alt"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kakao Story</span>
+            <span class="more-suggestions__icon-text">Apple</span>
           </div>
         </div>
       </div>
